# leafletter-app

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PRD.md  Procfile  README.md  TODO.md  manage.py  pyproject.toml  railway.json  requirements.txt  start_web.sh
.claude/: settings.json
.claude/agents/: dev.md  leafletter-developer.md  leafletter-pm.md  pgm.md  pm.md  proj-mgr.md  ux-agent.md  ux.md
.github/workflows/: add-to-project.yml  debug-projects.yml  sync-priority-labels.yaml  sync-priority-labels.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
campaigns/: admin.py  backends.py  forms.py  middleware.py  models.py  region_sources.py  tasks.py  tests.py  urls.py  views.py
campaigns/migrations/: 0001_beta.py  0001_initial.py  0002_alter_street_unique_together_street_block_index_and_more.py  0002_campaign_geo_limit.py  0003_add_rendering_map_status.py  0003_campaign_map_error.py  0003_remove_campaign_streets_geojson.py  0004_campaign_bbox.py  0004_campaign_hero_image_url.py  0005_add_is_test_to_campaign.py  0005_merge_materials_into_instructions.py  0006_campaignimage.py  0006_remove_goal_fold_into_instructions.py  0007_add_addr_range_to_street.py  0007_add_addresspoint.py  0008_cityfetchjob_street_city_index.py  0008_decouple_streets_from_campaigns.py  0009_trip_deleted.py  (+11 more)
doc/: manage-states.monojson  manage-states.txt  ux-manage-proposal.md
leafletter/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
(+56 files in other folders)
